added module to surefire plugin cmdLine